--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -7,6 +7,7 @@
     "dev": "tsx src/index.ts",
     "build": "tsc -p tsconfig.json",
     "start": "node dist/index.js",
+    "start:prod": "npm run start",
     "clean": "rimraf dist"
   },
   "dependencies": {
